--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@material-tailwind/react": "^2.1.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-markdown": "^9.0.1"
+    "react-grid-gallery": "1.0.1-alpha.0",
+    "react-markdown": "^9.0.1",
+    "yet-another-react-lightbox": "^3.17.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
