--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-dom": "^18.2.0",
     "react-grid-gallery": "1.0.1-alpha.0",
     "react-markdown": "^9.0.1",
+    "react-router": "^6.22.1",
+    "react-router-dom": "^6.22.1",
     "yet-another-react-lightbox": "^3.17.0"
   },
   "devDependencies": {
