--- a/package.json
+++ b/package.json
@@ -4,11 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "ssr": "node server",
     "dev": "vite",
-    "build": "pnpm run build:client && pnpm run build:server",
-    "build:client": "tsc && vite build --ssrManifest --outDir dist/client",
-    "build:server": "tsc && vite build --ssr src/entry-server.tsx --outDir dist/server",
+    "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -19,10 +16,8 @@
     "react-dom": "^18.2.0",
     "react-grid-gallery": "1.0.1-alpha.0",
     "react-markdown": "^9.0.1",
-    "yet-another-react-lightbox": "^3.17.0",
-    "compression": "^1.7.4",
-    "express": "^4.18.2",
-    "sirv": "^2.0.4"
+    "react-router": "^6.22.1",
+    "yet-another-react-lightbox": "^3.17.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
