--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && gzipper compress ./out ./dist --output-file-format [filename].[ext]",
     "start": "next start",
     "lint": "next lint"
   },
@@ -27,6 +27,7 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "gzipper": "^7.2.0",
     "postcss": "^8",
     "sharp": "^0.33.2",
     "tailwindcss": "^3.3.0",
