--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "react-grid-gallery": "1.0.1-alpha.0",
     "react-markdown": "^9.0.1",
     "react-router": "^6.22.1",
