--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-draggable": "^4.4.6",
     "react-grid-gallery": "1.0.1-alpha.0",
+    "react-map-interaction": "^2.1.0",
     "react-markdown": "^9.0.1",
     "react-router": "^6.22.1",
     "yet-another-react-lightbox": "^3.17.0"
