--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-ga": "^3.3.1",
+    "react-ga4": "^2.1.0",
     "react-grid-gallery": "1.0.1-alpha.0",
     "react-map-interaction": "^2.1.0",
     "react-markdown": "^9.0.1",
