--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "@material-tailwind/html": "^2.2.2",
     "@material-tailwind/react": "^2.1.9",
+    "google": "link:@next/third-parties/google",
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-ga4": "^2.1.0",
     "react-grid-gallery": "1.0.1-alpha.0",
     "react-map-interaction": "^2.1.0",
     "react-markdown": "^9.0.1",
