--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@material-tailwind/html": "^2.2.2",
     "@material-tailwind/react": "^2.1.9",
-    "google": "link:@next/third-parties/google",
+    "@next/third-parties": "^14.1.1",
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
